--- a/index.html
+++ b/index.html
@@ -75,6 +75,8 @@
       <h1>Theekshana Samaradiwakara</h1>
       <p>I'm a <span class="typed" data-typed-items="Human Being, Student, Developer"></span></p>
     </div>
+    <h1>This site is under construction</h1>
+    <h1>View Resume in side panel</h1>
   </section><!-- End Hero -->
 
   <main id="main">
