links open in new tab

--- a/index.html
+++ b/index.html
@@ -42,11 +42,11 @@
         <img src="assets/img/profile-img.jpg" alt="" class="img-fluid rounded-circle">
         <h1 class="text-light"><a href="index.html">Theekshana</a></h1>
         <div class="social-links mt-3 text-center">
-          <a href="https://www.linkedin.com/in/theekshana-madumal-047261177/" class="linkedin"><i class="bx bxl-linkedin"></i></a>
-          <a href="https://github.com/theekshanamadumal" class="github"><i class="bx bxl-github"></i></a>
-          <a href="theekshana.18@cse.mrt.ac.lk" class="envelope"><i class="icofont-envelope"></i></i></a>
-          <a href="https://www.hackerrank.com/theekshana_18?hr_r=1" class="hackerrank"><i class="icofont-badge"></i></a>
-          <a href="https://www.facebook.com/theekshana.madumal" class="facebook"><i class="bx bxl-facebook"></i></a>
+          <a href="https://www.linkedin.com/in/theekshana-madumal-047261177/" target="_blank" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+          <a href="https://github.com/theekshanamadumal" target="_blank" class="github"><i class="bx bxl-github"></i></a>
+          <a href="mailto:theekshana.18@cse.mrt.ac.lk" target="_blank" class="envelope"><i class="icofont-envelope"></i></i></a>
+          <a href="https://www.hackerrank.com/theekshana_18?hr_r=1" target="_blank" class="hackerrank"><i class="icofont-badge"></i></a>
+          <a href="https://www.facebook.com/theekshana.madumal" target="_blank" class="facebook"><i class="bx bxl-facebook"></i></a>
 
         </div>
       </div>
