--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   <!-- Template Main CSS File -->
   <link href="assets/css/style.css" rel="stylesheet">
 
- 
+   
 </head>
 
 <body>
@@ -408,8 +408,7 @@ educational-office-oop
           <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="500">
             <div class="icon"><i class="icofont-tasks-alt"></i></div>
             <h4 class="title"><a href="">Version Control</a></h4>
-            <p class="description">GitHub</p>
-          </div>
+ nb          </div>
         </div>
 
       </div>
@@ -498,8 +497,8 @@ educational-office-oop
 
           </div>
 
-          <div class="col-lg-7 mt-5 mt-lg-0 d-flex align-items-stretch">
-            <form action="forms/contact.php" method="post" role="form" class="php-email-form">
+          <div action="#" class="col-lg-7 mt-5 mt-lg-0 d-flex align-items-stretch">
+            <form role="form" class="php-email-form">
               <div class="form-row">
                 <div class="form-group col-md-6">
                   <label for="name">Your Name</label>
@@ -519,15 +518,15 @@ educational-office-oop
               </div>
               <div class="form-group">
                 <label for="name">Message</label>
-                <textarea class="form-control" name="message" rows="10" data-rule="required" data-msg="Please write something for us"></textarea>
+                <textarea class="form-control" name="message" id="message" rows="10" data-rule="required" data-msg="Please write something for us"></textarea>
                 <div class="validate"></div>
               </div>
               <div class="mb-3">
                 <div class="loading">Loading</div>
-                <div class="error-message"></div>
+                <div class=""></div>
                 <div class="sent-message">Your message has been sent. Thank you!</div>
               </div>
-              <div class="text-center"><button type="submit">Send Message</button></div>
+              <div id="mailBtn" class="text-center"><button type="submit">Send Message</button></div>
             </form>
           </div>
 
@@ -564,6 +563,12 @@ educational-office-oop
 
   <!-- Template Main JS File -->
   <script src="assets/js/main.js"></script>
+
+  
+  <!-- mail sending js -->
+  <script src="./mailScript.js"></script>
+  <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/emailjs-com@3/dist/email.min.js"></script>
+
 
 </body>
 
