--- a/index.html
+++ b/index.html
@@ -408,7 +408,8 @@ educational-office-oop
           <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="500">
             <div class="icon"><i class="icofont-tasks-alt"></i></div>
             <h4 class="title"><a href="">Version Control</a></h4>
- nb          </div>
+            <p class="description">GitHub</p>
+          </div>
         </div>
 
       </div>
