--- a/index.html
+++ b/index.html
@@ -229,146 +229,91 @@
 
     <!-- ======= Portfolio Section ======= -->
     <section id="portfolio" class="portfolio section-bg">
-      <div class="container">
+      <div class="container " data-aos="fade-up">
 
         <div class="section-title">
-          <h2>Projects  ..../ building</h2>
-          Point of Sale Web and Mobile Applications with location tracking
-and online payment facility. [Group]
-A sales system to manage inventory, customers, sellers, routes, and
-sales . Manager can view analytics and real time location of sellers.
-Sellers can view their real time sales progression and accept online
-payments.
-• HTML , Bootstrap , JavaScript , Express.js , React.js , MongoDB ,
-PayHere, Google Maps
-• GitHub Repository
- https://github.com/theekshanamadumal/POS-System
-Complete web site for an educational institute. [Individual]
-• HTML CSS
-• Hosted Website
-https://theekshanamadumal.github.io/uni-demo/index.html
-• GitHub Repository
-https://github.com/theekshanamadumal/uni-demo
-Web Application to add and read notes. [Individual]
-• HTML , Bootstrap , JavaScript , Express.js , React.js , MongoDB
-• GitHub Repository
-https://github.com/theekshanamadumal/notes-app
-Document handling web-based system for a zonal
-education office. [Group]
-• Able to online request letter submissions and live progression
-monitoring.
-• HTML , CSS , Bootstrap , PHP , MySQL
-• GitHub Repository
-https://github.com/theekshanamadumal/remote-document-manager--
-educational-office-oop
-        </div>
+          <h2>Projects</h2>
 
-        <div class="row" data-aos="fade-up">
-          <div class="col-lg-12 d-flex justify-content-center">
-            <ul id="portfolio-flters">
-              <li data-filter="*" class="filter-active">All</li>
-              <li data-filter=".filter-app">App</li>
-              <li data-filter=".filter-card">Card</li>
-              <li data-filter=".filter-web">Web</li>
-            </ul>
-          </div>
-        </div>
+        <div data-aos="fade-up" data-aos-delay="100" >
+          
+         <h4> Point of Sale Web and Mobile Applications with location tracking
+          and online payment facility. [Group]</h4>
 
-        <div class="row portfolio-container" data-aos="fade-up" data-aos-delay="100">
+        <h5>A sales system to manage inventory, customers, sellers, routes, and  sales </h5>
+        <hr>
+        <ul>
+        <li>Manager can view analytics and real time location of sellers.
+        </li>
+        <li>      Sellers can view their real time sales progression and accept online
+          payments.
+        </li>
+        <li>
+          HTML , Bootstrap , JavaScript , Express.js , React.js , MongoDB ,
+          PayHere, Google Maps
+        </li>
+        <li>
+          GitHub Repository
+          <a href=" https://github.com/theekshanamadumal/POS-System" target="_blank" rel="noopener noreferrer">https://github.com/theekshanamadumal/POS-System          
+          </a>
+        </li>
+        </ul>
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
-            <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-1.jpg" class="img-fluid" alt="">
-              <div class="portfolio-links">
-                <a href="assets/img/portfolio/portfolio-1.jpg" data-gall="portfolioGallery" class="venobox" title="App 1"><i class="bx bx-plus"></i></a>
-                <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
-              </div>
-            </div>
-          </div>
+        </div>  
+        <br>
+<div data-aos="fade-up" data-aos-delay="200">
+  
+        <h4> Complete web site for an educational institute. [Individual]        </h4>
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-web">
-            <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-2.jpg" class="img-fluid" alt="">
-              <div class="portfolio-links">
-                <a href="assets/img/portfolio/portfolio-2.jpg" data-gall="portfolioGallery" class="venobox" title="Web 3"><i class="bx bx-plus"></i></a>
-                <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
-              </div>
-            </div>
-          </div>
+        <h5>A sales system to manage inventory, customers, sellers, routes, and  sales </h5>
+        <hr>
+        <ul>
+        <li>
+          HTML , CSS
+        </li>
+        <li>
+          Hosted Website
+          <a href="https://theekshanamadumal.github.io/uni-demo/index.html" target="_blank" rel="noopener noreferrer">https://theekshanamadumal.github.io/uni-demo/index.html </a>
+        </li>
+        <li>
+          GitHub Repository
+          <a href="https://github.com/theekshanamadumal/uni-demo" target="_blank" rel="noopener noreferrer">https://github.com/theekshanamadumal/uni-demo </a>
+        </li>
+        </ul>
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
-            <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-3.jpg" class="img-fluid" alt="">
-              <div class="portfolio-links">
-                <a href="assets/img/portfolio/portfolio-3.jpg" data-gall="portfolioGallery" class="venobox" title="App 2"><i class="bx bx-plus"></i></a>
-                <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
-              </div>
-            </div>
-          </div>
+        <br>
+</div>
+<div data-aos="fade-up" data-aos-delay="300">
+  <h4> Web Application to add and read notes. [Individual]        </h4>
+  <hr>
+  <ul>
+  <li>
+    HTML , Bootstrap , JavaScript , Express.js , React.js , MongoDB
+  </li>
+  <li>
+    GitHub Repository
+    <a href="https://github.com/theekshanamadumal/notes-app" target="_blank" rel="noopener noreferrer">https://github.com/theekshanamadumal/notes-app </a>
+  </li>
+  </ul>
+</div>
+        <br>
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-card">
-            <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-4.jpg" class="img-fluid" alt="">
-              <div class="portfolio-links">
-                <a href="assets/img/portfolio/portfolio-4.jpg" data-gall="portfolioGallery" class="venobox" title="Card 2"><i class="bx bx-plus"></i></a>
-                <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-lg-4 col-md-6 portfolio-item filter-web">
-            <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-5.jpg" class="img-fluid" alt="">
-              <div class="portfolio-links">
-                <a href="assets/img/portfolio/portfolio-5.jpg" data-gall="portfolioGallery" class="venobox" title="Web 2"><i class="bx bx-plus"></i></a>
-                <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
-            <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-6.jpg" class="img-fluid" alt="">
-              <div class="portfolio-links">
-                <a href="assets/img/portfolio/portfolio-6.jpg" data-gall="portfolioGallery" class="venobox" title="App 3"><i class="bx bx-plus"></i></a>
-                <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-lg-4 col-md-6 portfolio-item filter-card">
-            <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-7.jpg" class="img-fluid" alt="">
-              <div class="portfolio-links">
-                <a href="assets/img/portfolio/portfolio-7.jpg" data-gall="portfolioGallery" class="venobox" title="Card 1"><i class="bx bx-plus"></i></a>
-                <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-lg-4 col-md-6 portfolio-item filter-card">
-            <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-8.jpg" class="img-fluid" alt="">
-              <div class="portfolio-links">
-                <a href="assets/img/portfolio/portfolio-8.jpg" data-gall="portfolioGallery" class="venobox" title="Card 3"><i class="bx bx-plus"></i></a>
-                <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-lg-4 col-md-6 portfolio-item filter-web">
-            <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-9.jpg" class="img-fluid" alt="">
-              <div class="portfolio-links">
-                <a href="assets/img/portfolio/portfolio-9.jpg" data-gall="portfolioGallery" class="venobox" title="Web 3"><i class="bx bx-plus"></i></a>
-                <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
-              </div>
-            </div>
-          </div>
+        <div data-aos="fade-up" data-aos-delay="400">
+          <h4>Document handling web-based system for a zonal education office. [Group]  </h4>
+        <hr>
+        <ul>
+        <li>Able to online request letter submissions and live progression monitoring.        </li>
+        <li>
+          HTML , CSS , Bootstrap , PHP , MySQL
+        </li>
+        <li>
+          GitHub Repository
+          <a href="https://github.com/theekshanamadumal/remote-document-manager--educational-office-oop" target="_blank" rel="noopener noreferrer">https://github.com/theekshanamadumal/remote-document-manager--educational-office-oop </a>
+        </li>
+        </ul>
 
         </div>
+        </div>
 
-      </div>
     </section><!-- End Portfolio Section -->
 
     <!-- ======= Services Section ======= -->
